--- a/cjw_web/cjw_admin/pom.xml
+++ b/cjw_web/cjw_admin/pom.xml
@@ -45,6 +45,16 @@
             <groupId>com.cjw</groupId>
             <artifactId>web_tool</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
